team-streaming/routes/ingress-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: streaming-chatbot-ingress-route
  namespace: streaming-frontend
spec:
  hostnames:
  - "subscriber.glootest.com"
  parentRefs:
  - name: ingress
    namespace: agentgateway-system
  rules:
  - backendRefs:
    - name: streaming-backend-chatbot
      port: 8501
    matches:
    - path:
        type: PathPrefix
        value: /
